# rpublish

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/public/css/: article_editor.css  articles_listing.css  core.css  dashboard.css  login.css  material-font.css  theme_dark.css
assets/public/js/: article_editor.js  article_listing.js
assets/public/js/editorjs/: attaches.js  footnotes.js  image.js  table.js
assets/templates/: dashboard.html  dashboard_sidebar_items.html  login.html  login.template
assets/templates/dashboard/: articles.html  dashboard.html  edit_article.html  new_article.html
data/auth/: users.json
src/: api_endpoint.rs  auth_endpoint.rs  handlers.rs  helpers.rs  init.rs  main.rs  rpublish.rs
src/handlers/: api.rs  auth.rs  dashboard.rs  public.rs
src/middleware/: auth.rs
src/rpublish/: article.rs  article_metadata.rs  articles_cache.rs  articles_manager.rs  identity_manager.rs  metadata_cache.rs
src/rpublish/articles_manager/: article.rs
