[package]
name = "rpublish"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
actix-web = "3.3.2"
actix-files = "0.5.0"
futures = "0.3.16"
serde = "1.0.126"
chrono = {version = "0.4.19", features = ["serde"]}
serde_json = "1.0.66"
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
